# manufacture-vision

./: .gitignore
docs/: high-level_design.md  manufacture-vision-platform.prd.md  process-flow.mermaid  techstack.md
manufacture-vision/: .env.example  .gitignore  README.md
manufacture-vision-site/: index.html
manufacturing-vision/central-backend/: README.md  alembic.ini  main.py  pyproject.toml
manufacturing-vision/central-backend/app/api/: auth.py  events.py  notifications.py  policies.py
manufacturing-vision/central-backend/app/core/: config.py  database.py  security.py
manufacturing-vision/central-backend/app/migrations/versions/: 001_initial_schema.py  002_reporting_indexes.py  003_notification_schema.py
manufacturing-vision/central-backend/app/models/: __init__.py  event.py  notification_rule.py
manufacturing-vision/central-backend/app/schemas/: notification.py  report.py
manufacturing-vision/perception-node/: main.py  pyproject.toml
manufacturing-vision/perception-node/src/: main.py
manufacturing-vision/perception-node/src/config/: settings.py
manufacturing-vision/perception-node/src/config/zones/: zones.json
manufacturing-vision/perception-node/src/detection/: fire_smoke_detector.py  ppe_detector.py
manufacturing-vision/perception-node/src/evidence/: exporter.py  ring_buffer.py  s3_uploader.py
manufacturing-vision/perception-node/src/ingestion/: frame_buffer.py  reader.py
manufacturing-vision/perception-node/src/outputs/: spine_pub.py
manufacturing-vision/perception-node/src/telemetry/: health.py  monitor.py
(+174 files in other folders)
